--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1834,7 +1834,7 @@ body {
 }
 .cid-r6ikaOgNzD .item-role P {
   color: #ffffff;
-  text-align: left;
+  text-align: center;
 }
 .cid-r6i85NZRBD {
   padding-top: 15px;
@@ -4892,7 +4892,7 @@ body {
 }
 .cid-r6hyn0tsoM .item-role P {
   color: #ffffff;
-  text-align: left;
+  text-align: center;
 }
 .cid-r6hKdMmEJx {
   padding-top: 15px;
