create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1786,7 +1786,7 @@ body {
   color: #767676;
 }
 .cid-r6ij1ildQA .mbr-text P {
-  text-align: center;
+  text-align: left;
   color: #000000;
 }
 .cid-r6ikaOgNzD {
@@ -4105,7 +4105,7 @@ body {
   color: #767676;
 }
 .cid-r6hQ6JiIO5 .mbr-text P {
-  text-align: center;
+  text-align: left;
   color: #000000;
 }
 .cid-r6hQg2Oryj {
@@ -4181,7 +4181,7 @@ body {
   color: #767676;
 }
 .cid-r6hS30YBhM .mbr-text P {
-  text-align: center;
+  text-align: left;
   color: #000000;
 }
 .cid-r6hRp5XKOs {
@@ -4336,7 +4336,7 @@ body {
   color: #767676;
 }
 .cid-r6hNteSVUJ .mbr-text P {
-  text-align: center;
+  text-align: left;
   color: #000000;
 }
 .cid-r6hMxlStcT {
@@ -5061,7 +5061,7 @@ body {
   color: #767676;
 }
 .cid-r6hOeIo6Dl .mbr-text P {
-  text-align: center;
+  text-align: left;
   color: #000000;
 }
 .cid-r6hulm9XfG {
