create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1676,6 +1676,9 @@ body {
 .cid-r6ih0fUAIY .content-slider-wrap {
   width: 100%;
 }
+.cid-r6ih0fUAIY H2 {
+  text-align: center;
+}
 .cid-r6cDWrLguu {
   padding-top: 30px;
   padding-bottom: 15px;
